@@ -1,3 +1,11 @@
+2005-06-16  Justin Warren <justin.warren@unicity.com.au>
+	* Fixed minor bug in snmpwalk.
+	* Changed traplistener and trapsender to use v2c SNMP via
+	the v2 module.
+	* Fixed bug in snmpmanager relating to the order in which
+	messages are sent and received.
+	* Fixed test_rfc1157.py to match new rfc1157 code.
+	
 2004-12-21  Jim Crumpler  <jgc@slug.jgc.unicity.com.au>
 
 	* lib/libsnmp/rfc1155.py (ObjectID.__getitem__): supported
